# pipeJoint

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  proxy_list.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  proxy_list.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  lib.rs  main.rs  tray.rs  types.rs
src-tauri/src/conn_manager/: connector.rs  handler.rs  listener.rs  mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: logs.rs  mod.rs  path_hander.rs
src/api/: proxy.ts  type.ts
src/views/: proxyTable.tsx
