[package]
name = "pipeJoint"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open", "system-tray", "windows7-compat" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
